hydroflow/tests/snapshots/surface_singleton__state_ref_unused@graphvis_mermaid.snap
---
source: hydroflow/tests/surface_singleton.rs
expression: "df.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"(1v1) <code>source_iter_delta(15..=25)</code>"/]:::pullClass
2v1[\"(2v1) <code>map(Max::new)</code>"/]:::pullClass
3v1[/"(3v1) <code>state_ref::&lt;Max&lt;_&gt;&gt;()</code>"\]:::pushClass
1v1-.->2v1; linkStyle 0 stroke:#060
2v1-.->3v1; linkStyle 1 stroke:#060
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    1v1
    2v1
    3v1
    subgraph sg_1v1_var_stream2 ["var <tt>stream2</tt>"]
        1v1
        2v1
    end
    subgraph sg_1v1_var_sum_of_stream2 ["var <tt>sum_of_stream2</tt>"]
        3v1
    end
end

